@@ -1,3 +1,5 @@
+* #1941 Call FocusSearch method for popping up the journal. (rwh)
+
 Snapshot 2df96b9af7
 
 * #4552 Allow to open images in Paint (marco)
